Brain-BT/force-app/main/default/objects/User/fields/agf__Certified_Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>agf__Certified_Product_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Product Owner</label>
    <type>Checkbox</type>
</CustomField>