Brain-BT/force-app/main/default/objects/User/fields/agf__GUS_User_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__GUS_User_Type__c</fullName>
    <description>Full Time Employee - This will be used to identify all FTEs in GUS
Contractor - This will be used to identify all Contractors in GUS
Team User - This will be used to identify all Team Users in GUS
API user - This will be used to identify all API users in GUS</description>
    <label>GUS User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Time Employee</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Team User</fullName>
            </value>
            <value>
                <fullName>API User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>