Brain-BT/force-app/main/default/objects/User/fields/agf__Scrum_Master_Certified_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrum_Master_Certified_Date__c</fullName>
    <label>Scrum Master Certified Date</label>
    <type>Date</type>
</CustomField>