Brain-BT/force-app/main/default/objects/User/fields/agf__Summary__c.field-meta.xml
<CustomField>
    <fullName>agf__Summary__c</fullName>
    <label>Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>