Brain-BT/force-app/main/default/objects/User/fields/agf__Team_Member_Allocation__c.field-meta.xml
<CustomField>
    <fullName>agf__Team_Member_Allocation__c</fullName>
    <formula>HYPERLINK(&apos;/apex/adm_teammemberallocation?Id=&apos; +  Id, &apos;view&apos; )</formula>
    <label>Team Member Allocation</label>
    <type>Text</type>
</CustomField>