Brain-BT/force-app/main/default/objects/User/fields/agf__User_Preference__c.field-meta.xml
<CustomField>
    <fullName>agf__User_Preference__c</fullName>
    <label>User Preference</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>