Brain-BT/force-app/main/default/objects/User/fields/Employed__c.field-meta.xml
<CustomField>
    <fullName>Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will specify if the employee is employed by the employer or not.</description>
    <label>Employed</label>
    <type>Checkbox</type>
</CustomField>