Brain-BT/force-app/main/default/objects/User/fields/File_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Access_Type__c</fullName>
    <description>Files and folders will be shared to this user as per this field value.</description>
    <inlineHelpText>Public Download Only -  Allow downloading all files with &quot;Public Download Only&quot; access type.
Public Download &amp; Write - Allow downloading and edit all files with &quot;Public Download &amp; Write&quot; access type.
None - Allow downloading only his/her files.</inlineHelpText>
    <label>Share all file / folder with Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public Download Only</fullName>
            </value>
            <value>
                <fullName>Public Download &amp; Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>