Brain-BT/force-app/main/default/objects/User/fields/Hide_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Hide_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Schedule</label>
    <type>Checkbox</type>
</CustomField>