Brain-BT/force-app/main/default/objects/User/fields/Is_File_Control_User__c.field-meta.xml
<CustomField>
    <fullName>Is_File_Control_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, access for File Control will be granted.</description>
    <inlineHelpText>If true, access for File Control will be granted.</inlineHelpText>
    <label>File Control User?</label>
    <type>Checkbox</type>
</CustomField>