Brain-BT/force-app/main/default/objects/User/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>This field is to store the skills of the employee</description>
    <label>Skills</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>