Brain-BT/force-app/main/default/objects/User/fields/Years_of_experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_experience__c</fullName>
    <description>This field is to store the years of experience of an employee</description>
    <label>Years of experience</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>